 - [core] now possible to {un}subscribe to folders using sogo-tool
 - [web] AngularJS optimizations in Mail module
 - [web] AngularJS optimization of color picker
 - [web] improve display of tasks status
 - [web] added custom fields support from Thunderbird's address book
 - [web] added Latvian (lv) translation - thanks to Juris Balandis
 - [web] expose user's defaults and settings inline

Bug fixes
 - [web] respect SOGoLanguage and SOGoSupportedLanguages (#4169)
 - [web] fixed adding list members with multiple email addresses
 - [web] fixed responsive condition of login page (960px to 1023px)
 - [core] newly subscribed calendars are excluded from freebusy (#3354)
 - [core] strip cr during LDIF import process (#4172)

3.2.9 (2017-05-09)
------------------

New features
 - [core] email alarms now have pretty formatting (#805)

Enhancements
 - [core] improved event invitation for all day events (#4145)
 - [web] improved interface refresh time with external IMAP accounts
 - [eas] added photo support for GAL search operations

Bug fixes
 - [web] fixed attachment path when inside multiple body parts
 - [web] fixed email reminder with attendees (#4115)
 - [web] prevented form to be marked dirty when changing password (#4138)
 - [web] restored support for SOGoLDAPContactInfoAttribute
 - [web] avoid duplicated email addresses in LDAP-based addressbook (#4129)
 - [web] fixed mail delegation of pristine user accounts (#4160)
 - [core] cherry-picked comma escaping fix from v2 (#3296)
 - [core] fix sogo-tool restore potentially crashing on corrupted data (#4048)
 - [core] handle properly mails using windows-1255 charset (#4124)
 - [core] fixed email reminders sent multiple times (#4100)
 - [core] fixed LDIF to vCard conversion for non-handled multi-value attributes (#4086)
 - [core] properly honor the "include in freebusy" setting (#3354)
 - [core] make sure to use crypt scheme when encoding md5/sha256/sha512 (#4137)